manifests/devops/namespace.yaml
kind: "Namespace"
apiVersion: "v1"
metadata:
  name: sandbox
  labels:
    env: "sandbox"
