manifests/devops/gocd-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gocd-server
  namespace: devops
  labels:
    app: gocd-server
spec:
  type: NodePort
  ports:
    - port: 80 #the port that this service should serve on
      targetPort: 8153
      protocol: TCP
      name: http
    - port: 8153 #the port that this service should serve on
      targetPort: 8153
      protocol: TCP
      name: internal
    - port: 8154 #the port that this service should serve on
      targetPort: 8154
      protocol: TCP
      name: api
  selector:
    app: gocd-server
