manifests/devops/nginx-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress
  namespace: devops
  labels:
    app: nginx-ingress
spec:
  type: LoadBalancer
  ports:
    - port: 80 #the port that this service should serve on
      targetPort: 80
      protocol: TCP
  selector:
    app: nginx-ingress
